--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -19,5 +19,197 @@ $link-color: #944bbb;
 // Update the sans-serif font family
 $family-sans-serif: "Helvetica", "Arial", sans-serif;
 
+// Header
+.header {
+  background-color: $theme-color-light;
+
+  .profile-photo {
+    float: right;
+    margin-right: 2em;
+  }
+
+  h1 {
+    color: $theme-font-color;
+    font-size: 2em;
+    .firstname {
+      font-weight: bold;
+    }
+    .surname {
+      font-weight: lighter;
+    }
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+  h3 {
+    font-size: 1.25em;
+    a[href] {
+      color: unset;
+    }
+    a[href]:hover {
+      color: $theme-font-color;
+      text-decoration: underline;
+    }
+  }
+
+  a.contact-icon {
+    margin-right: 1em;
+  }
+  a.contact-icon:hover {
+    color: $theme-font-color;
+    text-decoration: underline;
+  }
+}
+
+// Main Section
+.main {
+  padding: 2em 2em 0em 2em;
+}
+
+// Left Navbar
+// Nav bar
+$menu-item-active-background-color: $theme-color-invert;
+$menu-item-active-color: $theme-font-color;
+$menu-item-hover-background-color: $theme-color;
+$menu-item-hover-color: $theme-color-invert;
+
+.sidebar {
+  .navbar-burger {
+    align-items: left;
+  }
+  margin-right: 20px;
+}
+
+.menu-list {
+  a:hover {
+    border-radius: 10px;
+  }
+  .is-active-menu-item {
+    // font-weight: bolder;
+    color: $theme-font-color;
+    border: 1px solid $theme-color;
+    border-radius: 10px;
+  }
+  a.is-active-menu-item:hover {
+    background-color: $theme-color-invert;
+    color: $theme-font-color;
+  }
+}
+
+// Main content
+
+.main-content {
+  .main-section {
+    margin-bottom: 2rem;
+  }
+  // Base
+  a[href] {
+    color: $link-color;
+  }
+
+  a[href]:hover {
+    text-decoration: underline;
+    color: $theme-font-color;
+    text-decoration-thickness: 2px;
+  }
+
+  text-align: justify;
+
+  margin-left: 20px;
+
+  h1 {
+    font-size: 2rem;
+    color: $theme-font-color;
+    margin-bottom: 0.5rem;
+  }
+
+  // Bio
+  .fa-ul > li {
+    margin-bottom: 1rem;
+  }
+
+  .interests-list {
+    list-style: initial;
+    margin-left: 1.5rem;
+  }
+
+  // Publications
+  .author-underline {
+    border-bottom: 1px dotted;
+  }
+
+  .journal-prefix {
+    font-weight: bold;
+  }
+
+  a.paper-title {
+    text-decoration: none;
+    color: $theme-font-color;
+  }
+
+  .journal-title {
+    font-style: italic;
+  }
+
+  a.paper-btn {
+    border: 1px solid $theme-color;
+    border-radius: 10px;
+    padding: 0 0.5rem 0 0.5rem;
+    margin: 0 0.2rem 0 0.2rem;
+    text-decoration: none;
+  }
+  a.paper-btn:hover {
+    background-color: $theme-color;
+    color: white;
+    text-decoration: none;
+  }
+  a.pdf:hover {
+    background-color: #f40f02;
+    border-color: #f40f02;
+    opacity: 0.7;
+  }
+
+  .pub-item,
+  .line-item {
+    padding-bottom: 0.75rem;
+  }
+
+  // Teaching/Professional Items
+  .tag-label {
+    background-color: $theme-color-light;
+    padding: 0.1rem 0.4rem 0.1rem 0.4rem;
+    border-radius: 0 10px 10px 0;
+    // color: black;
+    // text-shadow: 0 2px 2px white;
+    margin-right: 0.75rem;
+  }
+  .spring-time {
+    background-color: #dae8c2;
+  }
+  .summer-time {
+    background-color: gold;
+  }
+  .fall-time {
+    background-color: #ffce91;
+  }
+
+  // CV
+  a.download-btn {
+    border: 1px solid $theme-color;
+    border-radius: 20px;
+    padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+    text-decoration: none;
+    margin-right: 2rem;
+  }
+  a.download-btn:hover {
+    background-color: $theme-color;
+    color: white;
+    text-decoration: none;
+  }
+  .cv-embed {
+    margin-top: 1.5rem;
+  }
+}
+
 // 4. Import the rest of Bulma
 @import "../node_modules/bulma/bulma";
