--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -19,6 +19,10 @@ $link-color: #944bbb;
 // Update the sans-serif font family
 $family-sans-serif: "Helvetica", "Arial", sans-serif;
 
+.main {
+  min-height: 55vh;
+}
+
 // Header
 .header {
   background-color: $theme-color-light;
@@ -208,6 +212,20 @@ $menu-item-hover-color: $theme-color-invert;
   }
   .cv-embed {
     margin-top: 1.5rem;
+  }
+}
+
+// Footer
+footer {
+  text-align: center;
+  margin: 10px 0px 30px 0px;
+
+  p,
+  a {
+    color: lightgray;
+  }
+  a:hover {
+    color: $theme-color;
   }
 }
 
